using System.Collections;
using System.Collections.Generic;
using UnityEngine;

public class SQL_Animations {

	// public static readonly string MARCHER = "marcher";
	// public static readonly string COURIR = "courir";
	// public static readonly string CHERCHER = "chercher";
	// public static readonly string CHARGER = "charger";
	public static readonly string ETRE_BLESSE = "etreBlesse";
	public static readonly string MOURIR = "mourir";
	// public static readonly string COMBATTRE = "combattre";
	public static readonly string GARDER = "garder";
	// public static readonly string ATTAQUER_EMPALER = "attaquerEmpaler";
	public static readonly string ATTAQUER = "attaquer";
}
